added new tab opening for links

--- a/inedx.html
+++ b/inedx.html
@@ -17,8 +17,8 @@
         <div ID="Navigation">
           <div ID="Navicontainer"><img ID="Navicon" src="assets/aperture.svg" alt="Logo"></div>
           <ul ID="Navbuttons">
-            <a href="https://www.linkedin.com/in/adam-bukovinszki-30bab2b/"><li>LinkedIN</li></a>
-            <a href="https://github.com/Techika?tab=repositories"><li>GITHUB</li></a>
+            <a href="https://www.linkedin.com/in/adam-bukovinszki-30bab2b/" target="_blank"><li>LinkedIN</li></a>
+            <a href="https://github.com/Techika?tab=repositories" target="_blank"><li>GITHUB</li></a>
             <a href="#Wiki"><li>WIKI</li></a>
             <a href="#Home"><li>HOME</li></a>
           </ul>
