--- a/inedx.html
+++ b/inedx.html
@@ -12,21 +12,21 @@
 
   <body>
    
-    <div class="navbar">
-      <div class="navcontent">
-        <div ID="Navigation">
-          <div ID="Navicontainer"><img ID="Navicon" src="assets/aperture.svg" alt="Logo"></div>
-          <ul ID="Navbuttons">
-            <a href="https://www.linkedin.com/in/adam-bukovinszki-30bab2b/" target="_blank"><li>LinkedIN</li></a>
-            <a href="https://github.com/Techika?tab=repositories" target="_blank"><li>GITHUB</li></a>
-            <a href="#Wiki"><li>WIKI</li></a>
-            <a href="#Home"><li>HOME</li></a>
+    <nav  class="nav-bar">
+      <div  class="nav-middle align-main">
+          <div  class="nav-picture">
+            <img src="assets/aperture.svg" alt="Logo">
+          </div>
+          <ul  class="nav-buttons">
+            <li><a href="#Home">HOME</a></li>
+            <li><a href="#Wiki">WIKI</a></li>
+            <li><a href="https://github.com/Techika?tab=repositories" target="_blank">GITHUB</a></li>
+            <li><a href="https://www.linkedin.com/in/adam-bukovinszki-30bab2b/" target="_blank">LinkedIN</a></li>   
           </ul>
-        </div>
-      </div> 
-    </div>
+      </div>
+    </nav>
     
-    <div class="content">
+    <div class="content align-main">
     <div ID="Home" class="intro">
       <h1>Adam Bukovinszki</h1>
       <h2>Fullstack software developer</h2>
